spl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COLON
    DIVEQ
    MINUSEQ
    MOD
    PLUSEQ
    STRING
    TIMESEQ

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> bloque_list
Rule 2     bloque_list -> bloque_list Bloque
Rule 3     bloque_list -> empty
Rule 4     Bloque -> sentencia_list
Rule 5     sentencia_list -> sentencia_list Sentencia
Rule 6     sentencia_list -> empty
Rule 7     Sentencia -> Declaracion SEMICOLON
Rule 8     Sentencia -> Estructura
Rule 9     Sentencia -> Funcion
Rule 10    Sentencia -> Metodo
Rule 11    Sentencia -> Asignacion SEMICOLON
Rule 12    Sentencia -> LlamadoFun SEMICOLON
Rule 13    Sentencia -> LlamadoMet SEMICOLON
Rule 14    Sentencia -> While
Rule 15    Sentencia -> For
Rule 16    Sentencia -> If
Rule 17    Sentencia -> RETURN Expr SEMICOLON
Rule 18    If -> IF LPAREN Expr RPAREN LBRACE Bloque RBRACE ELSE LBRACE Bloque RBRACE
Rule 19    If -> IF LPAREN Expr RPAREN LBRACE Bloque RBRACE
Rule 20    While -> WHILE LPAREN BoolExpr RPAREN LBRACE Bloque RBRACE
Rule 21    For -> FOR LPAREN ForInit SEMICOLON Expr SEMICOLON ForUpdate RPAREN LBRACE Bloque RBRACE
Rule 22    ForInit -> Declaracion
Rule 23    ForInit -> Asignacion
Rule 24    ForUpdate -> Asignacion
Rule 25    ForUpdate -> Incremento
Rule 26    ForUpdate -> Decremento
Rule 27    Incremento -> IDENTIFIER INC
Rule 28    Decremento -> IDENTIFIER DEC
Rule 29    BoolExpr -> BoolExpr OR BoolTerm
Rule 30    BoolExpr -> BoolTerm
Rule 31    BoolTerm -> BoolTerm AND BoolFactor
Rule 32    BoolTerm -> BoolFactor
Rule 33    BoolFactor -> NOT BoolFactor
Rule 34    BoolFactor -> LPAREN BoolExpr RPAREN
Rule 35    BoolFactor -> TRUE
Rule 36    BoolFactor -> FALSE
Rule 37    BoolFactor -> Relacion
Rule 38    BoolFactor -> LlamadoFun
Rule 39    BoolFactor -> LlamadoMet
Rule 40    BoolFactor -> AccesoStruc
Rule 41    LlamadoFun -> IDENTIFIER LPAREN exprs_opt RPAREN
Rule 42    LlamadoMet -> AccesoStruc LPAREN exprs_opt RPAREN
Rule 43    exprs_opt -> Exprs
Rule 44    exprs_opt -> empty
Rule 45    Exprs -> Expr
Rule 46    Exprs -> Exprs COMMA Expr
Rule 47    Estructura -> STRUCT IDENTIFIER LBRACE decl_plus RBRACE
Rule 48    decl_plus -> Declaracion SEMICOLON
Rule 49    decl_plus -> decl_plus Declaracion SEMICOLON
Rule 50    Metodo -> Tipo IDENTIFIER DOT IDENTIFIER LPAREN parametros_opt RPAREN LBRACE Bloque RBRACE
Rule 51    Declaracion -> Tipo IDENTIFIER ASSIGN Expr
Rule 52    Declaracion -> Tipo IDENTIFIER
Rule 53    Declaracion -> Tipo IDENTIFIER LBRACKET INTEGER RBRACKET
Rule 54    Asignacion -> IDENTIFIER ASSIGN Expr
Rule 55    Asignacion -> AccesoStruc ASSIGN Expr
Rule 56    Asignacion -> IDENTIFIER LBRACKET Expr RBRACKET ASSIGN Expr
Rule 57    Expr -> AritExpr
Rule 58    Expr -> BoolExpr
Rule 59    AritExpr -> AritExpr PLUS AritTerm
Rule 60    AritExpr -> AritExpr MINUS AritTerm
Rule 61    AritExpr -> AritTerm
Rule 62    AritTerm -> AritTerm TIMES AritFactor
Rule 63    AritTerm -> AritTerm DIV AritFactor
Rule 64    AritTerm -> AritFactor
Rule 65    AritFactor -> IDENTIFIER NEW
Rule 66    AritFactor -> LPAREN Expr RPAREN
Rule 67    AritFactor -> INTEGER
Rule 68    AritFactor -> FLOAT_NUMBER
Rule 69    AritFactor -> IDENTIFIER
Rule 70    AritFactor -> AccesoStruc
Rule 71    AritFactor -> IDENTIFIER LBRACKET Expr RBRACKET
Rule 72    Relacion -> AritExpr RelOp AritExpr
Rule 73    RelOp -> LT
Rule 74    RelOp -> GT
Rule 75    RelOp -> LE
Rule 76    RelOp -> GE
Rule 77    RelOp -> EQ
Rule 78    RelOp -> NE
Rule 79    AccesoStruc -> IDENTIFIER DOT IDENTIFIER
Rule 80    AccesoStruc -> AccesoStruc DOT IDENTIFIER
Rule 81    Funcion -> Tipo IDENTIFIER LPAREN parametros_opt RPAREN LBRACE Bloque RBRACE
Rule 82    parametros_opt -> Parametros
Rule 83    parametros_opt -> empty
Rule 84    Parametros -> Parametro
Rule 85    Parametros -> Parametros COMMA Parametro
Rule 86    Parametro -> Tipo IDENTIFIER
Rule 87    Tipo -> INT
Rule 88    Tipo -> FLOAT
Rule 89    Tipo -> BOOL
Rule 90    Tipo -> IDENTIFIER
Rule 91    empty -> <empty>

Terminals, with rules where they appear

AND                  : 31
ASSIGN               : 51 54 55 56
BOOL                 : 89
COLON                : 
COMMA                : 46 85
DEC                  : 28
DIV                  : 63
DIVEQ                : 
DOT                  : 50 79 80
ELSE                 : 18
EQ                   : 77
FALSE                : 36
FLOAT                : 88
FLOAT_NUMBER         : 68
FOR                  : 21
GE                   : 76
GT                   : 74
IDENTIFIER           : 27 28 41 47 50 50 51 52 53 54 56 65 69 71 79 79 80 81 86 90
IF                   : 18 19
INC                  : 27
INT                  : 87
INTEGER              : 53 67
LBRACE               : 18 18 19 20 21 47 50 81
LBRACKET             : 53 56 71
LE                   : 75
LPAREN               : 18 19 20 21 34 41 42 50 66 81
LT                   : 73
MINUS                : 60
MINUSEQ              : 
MOD                  : 
NE                   : 78
NEW                  : 65
NOT                  : 33
OR                   : 29
PLUS                 : 59
PLUSEQ               : 
RBRACE               : 18 18 19 20 21 47 50 81
RBRACKET             : 53 56 71
RETURN               : 17
RPAREN               : 18 19 20 21 34 41 42 50 66 81
SEMICOLON            : 7 11 12 13 17 21 21 48 49
STRING               : 
STRUCT               : 47
TIMES                : 62
TIMESEQ              : 
TRUE                 : 35
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

AccesoStruc          : 40 42 55 70 80
AritExpr             : 57 59 60 72 72
AritFactor           : 62 63 64
AritTerm             : 59 60 61 62 63
Asignacion           : 11 23 24
Bloque               : 2 18 18 19 20 21 50 81
BoolExpr             : 20 29 34 58
BoolFactor           : 31 32 33
BoolTerm             : 29 30 31
Declaracion          : 7 22 48 49
Decremento           : 26
Estructura           : 8
Expr                 : 17 18 19 21 45 46 51 54 55 56 56 66 71
Exprs                : 43 46
For                  : 15
ForInit              : 21
ForUpdate            : 21
Funcion              : 9
If                   : 16
Incremento           : 25
LlamadoFun           : 12 38
LlamadoMet           : 13 39
Metodo               : 10
Parametro            : 84 85
Parametros           : 82 85
Programa             : 0
RelOp                : 72
Relacion             : 37
Sentencia            : 5
Tipo                 : 50 51 52 53 81 86
While                : 14
bloque_list          : 1 2
decl_plus            : 47 49
empty                : 3 6 44 83
exprs_opt            : 41 42
parametros_opt       : 50 81
sentencia_list       : 4 5

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . bloque_list
    (2) bloque_list -> . bloque_list Bloque
    (3) bloque_list -> . empty
    (91) empty -> .

    RETURN          reduce using rule 91 (empty -> .)
    STRUCT          reduce using rule 91 (empty -> .)
    IDENTIFIER      reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    FOR             reduce using rule 91 (empty -> .)
    IF              reduce using rule 91 (empty -> .)
    INT             reduce using rule 91 (empty -> .)
    FLOAT           reduce using rule 91 (empty -> .)
    BOOL            reduce using rule 91 (empty -> .)
    $end            reduce using rule 91 (empty -> .)

    Programa                       shift and go to state 1
    bloque_list                    shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> bloque_list .
    (2) bloque_list -> bloque_list . Bloque
    (4) Bloque -> . sentencia_list
    (5) sentencia_list -> . sentencia_list Sentencia
    (6) sentencia_list -> . empty
    (91) empty -> .

  ! reduce/reduce conflict for $end resolved using rule 1 (Programa -> bloque_list .)
    $end            reduce using rule 1 (Programa -> bloque_list .)
    RETURN          reduce using rule 91 (empty -> .)
    STRUCT          reduce using rule 91 (empty -> .)
    IDENTIFIER      reduce using rule 91 (empty -> .)
    WHILE           reduce using rule 91 (empty -> .)
    FOR             reduce using rule 91 (empty -> .)
    IF              reduce using rule 91 (empty -> .)
    INT             reduce using rule 91 (empty -> .)
    FLOAT           reduce using rule 91 (empty -> .)
    BOOL            reduce using rule 91 (empty -> .)

  ! $end            [ reduce using rule 91 (empty -> .) ]

    Bloque                         shift and go to state 4
    sentencia_list                 shift and go to state 5
    empty                          shift and go to state 6

state 3

    (3) bloque_list -> empty .

    RETURN          reduce using rule 3 (bloque_list -> empty .)
    STRUCT          reduce using rule 3 (bloque_list -> empty .)
    IDENTIFIER      reduce using rule 3 (bloque_list -> empty .)
    WHILE           reduce using rule 3 (bloque_list -> empty .)
    FOR             reduce using rule 3 (bloque_list -> empty .)
    IF              reduce using rule 3 (bloque_list -> empty .)
    INT             reduce using rule 3 (bloque_list -> empty .)
    FLOAT           reduce using rule 3 (bloque_list -> empty .)
    BOOL            reduce using rule 3 (bloque_list -> empty .)
    $end            reduce using rule 3 (bloque_list -> empty .)


state 4

    (2) bloque_list -> bloque_list Bloque .

    RETURN          reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    STRUCT          reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    IDENTIFIER      reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    WHILE           reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    FOR             reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    IF              reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    INT             reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    FLOAT           reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    BOOL            reduce using rule 2 (bloque_list -> bloque_list Bloque .)
    $end            reduce using rule 2 (bloque_list -> bloque_list Bloque .)


state 5

    (4) Bloque -> sentencia_list .
    (5) sentencia_list -> sentencia_list . Sentencia
    (7) Sentencia -> . Declaracion SEMICOLON
    (8) Sentencia -> . Estructura
    (9) Sentencia -> . Funcion
    (10) Sentencia -> . Metodo
    (11) Sentencia -> . Asignacion SEMICOLON
    (12) Sentencia -> . LlamadoFun SEMICOLON
    (13) Sentencia -> . LlamadoMet SEMICOLON
    (14) Sentencia -> . While
    (15) Sentencia -> . For
    (16) Sentencia -> . If
    (17) Sentencia -> . RETURN Expr SEMICOLON
    (51) Declaracion -> . Tipo IDENTIFIER ASSIGN Expr
    (52) Declaracion -> . Tipo IDENTIFIER
    (53) Declaracion -> . Tipo IDENTIFIER LBRACKET INTEGER RBRACKET
    (47) Estructura -> . STRUCT IDENTIFIER LBRACE decl_plus RBRACE
    (81) Funcion -> . Tipo IDENTIFIER LPAREN parametros_opt RPAREN LBRACE Bloque RBRACE
    (50) Metodo -> . Tipo IDENTIFIER DOT IDENTIFIER LPAREN parametros_opt RPAREN LBRACE Bloque RBRACE
    (54) Asignacion -> . IDENTIFIER ASSIGN Expr
    (55) Asignacion -> . AccesoStruc ASSIGN Expr
    (56) Asignacion -> . IDENTIFIER LBRACKET Expr RBRACKET ASSIGN Expr
    (41) LlamadoFun -> . IDENTIFIER LPAREN exprs_opt RPAREN
    (42) LlamadoMet -> . AccesoStruc LPAREN exprs_opt RPAREN
    (20) While -> . WHILE LPAREN BoolExpr RPAREN LBRACE Bloque RBRACE
    (21) For -> . FOR LPAREN ForInit SEMICOLON Expr SEMICOLON ForUpdate RPAREN LBRACE Bloque RBRACE
    (18) If -> . IF LPAREN Expr RPAREN LBRACE Bloque RBRACE ELSE LBRACE Bloque RBRACE
    (19) If -> . IF LPAREN Expr RPAREN LBRACE Bloque RBRACE
    (87) Tipo -> . INT
    (88) Tipo -> . FLOAT
    (89) Tipo -> . BOOL
    (90) Tipo -> . IDENTIFIER
    (79) AccesoStruc -> . IDENTIFIER DOT IDENTIFIER
    (80) AccesoStruc -> . AccesoStruc DOT IDENTIFIER

  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for STRUCT resolved as shift
  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    $end            reduce using rule 4 (Bloque -> sentencia_list .)
    RBRACE          reduce using rule 4 (Bloque -> sentencia_list .)
    RETURN          shift and go to state 18
    STRUCT          shift and go to state 21
    IDENTIFIER      shift and go to state 20
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    IF              shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    BOOL            shift and go to state 28

  ! RETURN          [ reduce using rule 4 (Bloque -> sentencia_list .) ]
  ! STRUCT          [ reduce using rule 4 (Bloque -> sentencia_list .) ]
  ! IDENTIFIER      [ reduce using rule 4 (Bloque -> sentencia_list .) ]
  ! WHILE           [ reduce using rule 4 (Bloque -> sentencia_list .) ]
  ! FOR             [ reduce using rule 4 (Bloque -> sentencia_list .) ]
  ! IF              [ reduce using rule 4 (Bloque -> sentencia_list .) ]
  ! INT             [ reduce using rule 4 (Bloque -> sentencia_list .) ]
  ! FLOAT           [ reduce using rule 4 (Bloque -> sentencia_list .) ]
  ! BOOL            [ reduce using rule 4 (Bloque -> sentencia_list .) ]

    Sentencia                      shift and go to state 7
    Declaracion                    shift and go to state 8
    Estructura                     shift and go to state 9
    Funcion                        shift and go to state 10
    Metodo                         shift and go to state 11
    Asignacion                     shift and go to state 12
    LlamadoFun                     shift and go to state 13
    LlamadoMet                     shift and go to state 14
    While                          shift and go to state 15
    For                            shift and go to state 16
    If                             shift and go to state 17
    Tipo                           shift and go to state 19
    AccesoStruc                    shift and go to state 22

state 6

    (6) sentencia_list -> empty .

    RETURN          reduce using rule 6 (sentencia_list -> empty .)
    STRUCT          reduce using rule 6 (sentencia_list -> empty .)
    IDENTIFIER      reduce using rule 6 (sentencia_list -> empty .)
    WHILE           reduce using rule 6 (sentencia_list -> empty .)
    FOR             reduce using rule 6 (sentencia_list -> empty .)
    IF              reduce using rule 6 (sentencia_list -> empty .)
    INT             reduce using rule 6 (sentencia_list -> empty .)
    FLOAT           reduce using rule 6 (sentencia_list -> empty .)
    BOOL            reduce using rule 6 (sentencia_list -> empty .)
    $end            reduce using rule 6 (sentencia_list -> empty .)
    RBRACE          reduce using rule 6 (sentencia_list -> empty .)


state 7

    (5) sentencia_list -> sentencia_list Sentencia .

    RETURN          reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    STRUCT          reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    IDENTIFIER      reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    WHILE           reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    FOR             reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    IF              reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    INT             reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    FLOAT           reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    BOOL            reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    $end            reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)
    RBRACE          reduce using rule 5 (sentencia_list -> sentencia_list Sentencia .)


state 8

    (7) Sentencia -> Declaracion . SEMICOLON

    SEMICOLON       shift and go to state 29


state 9

    (8) Sentencia -> Estructura .

    RETURN          reduce using rule 8 (Sentencia -> Estructura .)
    STRUCT          reduce using rule 8 (Sentencia -> Estructura .)
    IDENTIFIER      reduce using rule 8 (Sentencia -> Estructura .)
    WHILE           reduce using rule 8 (Sentencia -> Estructura .)
    FOR             reduce using rule 8 (Sentencia -> Estructura .)
    IF              reduce using rule 8 (Sentencia -> Estructura .)
    INT             reduce using rule 8 (Sentencia -> Estructura .)
    FLOAT           reduce using rule 8 (Sentencia -> Estructura .)
    BOOL            reduce using rule 8 (Sentencia -> Estructura .)
    $end            reduce using rule 8 (Sentencia -> Estructura .)
    RBRACE          reduce using rule 8 (Sentencia -> Estructura .)


state 10

    (9) Sentencia -> Funcion .

    RETURN          reduce using rule 9 (Sentencia -> Funcion .)
    STRUCT          reduce using rule 9 (Sentencia -> Funcion .)
    IDENTIFIER      reduce using rule 9 (Sentencia -> Funcion .)
    WHILE           reduce using rule 9 (Sentencia -> Funcion .)
    FOR             reduce using rule 9 (Sentencia -> Funcion .)
    IF              reduce using rule 9 (Sentencia -> Funcion .)
    INT             reduce using rule 9 (Sentencia -> Funcion .)
    FLOAT           reduce using rule 9 (Sentencia -> Funcion .)
    BOOL            reduce using rule 9 (Sentencia -> Funcion .)
    $end            reduce using rule 9 (Sentencia -> Funcion .)
    RBRACE          reduce using rule 9 (Sentencia -> Funcion .)


state 11

    (10) Sentencia -> Metodo .

    RETURN          reduce using rule 10 (Sentencia -> Metodo .)
    STRUCT          reduce using rule 10 (Sentencia -> Metodo .)
    IDENTIFIER      reduce using rule 10 (Sentencia -> Metodo .)
    WHILE           reduce using rule 10 (Sentencia -> Metodo .)
    FOR             reduce using rule 10 (Sentencia -> Metodo .)
    IF              reduce using rule 10 (Sentencia -> Metodo .)
    INT             reduce using rule 10 (Sentencia -> Metodo .)
    FLOAT           reduce using rule 10 (Sentencia -> Metodo .)
    BOOL            reduce using rule 10 (Sentencia -> Metodo .)
    $end            reduce using rule 10 (Sentencia -> Metodo .)
    RBRACE          reduce using rule 10 (Sentencia -> Metodo .)


state 12

    (11) Sentencia -> Asignacion . SEMICOLON

    SEMICOLON       shift and go to state 30


state 13

    (12) Sentencia -> LlamadoFun . SEMICOLON

    SEMICOLON       shift and go to state 31


state 14

    (13) Sentencia -> LlamadoMet . SEMICOLON

    SEMICOLON       shift and go to state 32


state 15

    (14) Sentencia -> While .

    RETURN          reduce using rule 14 (Sentencia -> While .)
    STRUCT          reduce using rule 14 (Sentencia -> While .)
    IDENTIFIER      reduce using rule 14 (Sentencia -> While .)
    WHILE           reduce using rule 14 (Sentencia -> While .)
    FOR             reduce using rule 14 (Sentencia -> While .)
    IF              reduce using rule 14 (Sentencia -> While .)
    INT             reduce using rule 14 (Sentencia -> While .)
    FLOAT           reduce using rule 14 (Sentencia -> While .)
    BOOL            reduce using rule 14 (Sentencia -> While .)
    $end            reduce using rule 14 (Sentencia -> While .)
    RBRACE          reduce using rule 14 (Sentencia -> While .)


state 16

    (15) Sentencia -> For .

    RETURN          reduce using rule 15 (Sentencia -> For .)
    STRUCT          reduce using rule 15 (Sentencia -> For .)
    IDENTIFIER      reduce using rule 15 (Sentencia -> For .)
    WHILE           reduce using rule 15 (Sentencia -> For .)
    FOR             reduce using rule 15 (Sentencia -> For .)
    IF              reduce using rule 15 (Sentencia -> For .)
    INT             reduce using rule 15 (Sentencia -> For .)
    FLOAT           reduce using rule 15 (Sentencia -> For .)
    BOOL            reduce using rule 15 (Sentencia -> For .)
    $end            reduce using rule 15 (Sentencia -> For .)
    RBRACE          reduce using rule 15 (Sentencia -> For .)


state 17

    (16) Sentencia -> If .

    RETURN          reduce using rule 16 (Sentencia -> If .)
    STRUCT          reduce using rule 16 (Sentencia -> If .)
    IDENTIFIER      reduce using rule 16 (Sentencia -> If .)
    WHILE           reduce using rule 16 (Sentencia -> If .)
    FOR             reduce using rule 16 (Sentencia -> If .)
    IF              reduce using rule 16 (Sentencia -> If .)
    INT             reduce using rule 16 (Sentencia -> If .)
    FLOAT           reduce using rule 16 (Sentencia -> If .)
    BOOL            reduce using rule 16 (Sentencia -> If .)
    $end            reduce using rule 16 (Sentencia -> If .)
    RBRACE          reduce using rule 16 (Sentencia -> If .)


state 18

    (17) Sentencia -> RETURN . Expr SEMICOLON
    (57) Expr -> . AritExpr
    (58) Expr -> . BoolExpr
    (59) AritExpr -> . AritExpr PLUS AritTerm
    (60) AritExpr -> . AritExpr MINUS AritTerm
    (61) AritExpr -> . AritTerm
    (29) BoolExpr -> . BoolExpr OR BoolTerm
    (30) BoolExpr -> . BoolTerm
    (62) AritTerm -> . AritTerm TIMES AritFactor
    (63) AritTerm -> . AritTerm DIV AritFactor
    (64) AritTerm -> . AritFactor
    (31) BoolTerm -> . BoolTerm AND BoolFactor
    (32) BoolTerm -> . BoolFactor
    (65) AritFactor -> . IDENTIFIER NEW
    (66) AritFactor -> . LPAREN Expr RPAREN
    (67) AritFactor -> . INTEGER
    (68) AritFactor -> . FLOAT_NUMBER
    (69) AritFactor -> . IDENTIFIER
    (70) AritFactor -> . AccesoStruc
    (71) AritFactor -> . IDENTIFIER LBRACKET Expr RBRACKET
    (33) BoolFactor -> . NOT BoolFactor
    (34) BoolFactor -> . LPAREN BoolExpr RPAREN
    (35) BoolFactor -> . TRUE
    (36) BoolFactor -> . FALSE
    (37) BoolFactor -> . Relacion
    (38) BoolFactor -> . LlamadoFun
    (39) BoolFactor -> . LlamadoMet
    (40) BoolFactor -> . AccesoStruc
    (79) AccesoStruc -> . IDENTIFIER DOT IDENTIFIER
    (80) AccesoStruc -> . AccesoStruc DOT IDENTIFIER
    (72) Relacion -> . AritExpr RelOp AritExpr
    (41) LlamadoFun -> . IDENTIFIER LPAREN exprs_opt RPAREN
    (42) LlamadoMet -> . AccesoStruc LPAREN exprs_opt RPAREN

    IDENTIFIER      shift and go to state 40
    LPAREN          shift and go to state 41
    INTEGER         shift and go to state 42
    FLOAT_NUMBER    shift and go to state 43
    NOT             shift and go to state 45
    TRUE            shift and go to state 46
    FALSE           shift and go to state 47

    Expr                           shift and go to state 33
    AritExpr                       shift and go to state 34
    BoolExpr                       shift and go to state 35
    AritTerm                       shift and go to state 36
    BoolTerm                       shift and go to state 37
    AritFactor                     shift and go to state 38
    BoolFactor                     shift and go to state 39
    AccesoStruc                    shift and go to state 44
    Relacion                       shift and go to state 48
    LlamadoFun                     shift and go to state 49
    LlamadoMet                     shift and go to state 50

state 19

    (51) Declaracion -> Tipo . IDENTIFIER ASSIGN Expr
    (52) Declaracion -> Tipo . IDENTIFIER
    (53) Declaracion -> Tipo . IDENTIFIER LBRACKET INTEGER RBRACKET
    (81) Funcion -> Tipo . IDENTIFIER LPAREN parametros_opt RPAREN LBRACE Bloque RBRACE
    (50) Metodo -> Tipo . IDENTIFIER DOT IDENTIFIER LPAREN parametros_opt RPAREN LBRACE Bloque RBRACE

    IDENTIFIER      shift and go to state 51


state 20

    (54) Asignacion -> IDENTIFIER . ASSIGN Expr
    (56) Asignacion -> IDENTIFIER . LBRACKET Expr RBRACKET ASSIGN Expr
    (41) LlamadoFun -> IDENTIFIER . LPAREN exprs_opt RPAREN
    (90) Tipo -> IDENTIFIER .
    (79) AccesoStruc -> IDENTIFIER . DOT IDENTIFIER

    ASSIGN          shift and go to state 52
    LBRACKET        shift and go to state 53
    LPAREN          shift and go to state 54
    IDENTIFIER      reduce using rule 90 (Tipo -> IDENTIFIER .)
    DOT             shift and go to state 55


state 21

    (47) Estructura -> STRUCT . IDENTIFIER LBRACE decl_plus RBRACE

    IDENTIFIER      shift and go to state 56


state 22

    (55) Asignacion -> AccesoStruc . ASSIGN Expr
    (42) LlamadoMet -> AccesoStruc . LPAREN exprs_opt RPAREN
    (80) AccesoStruc -> AccesoStruc . DOT IDENTIFIER

    ASSIGN          shift and go to state 57
    LPAREN          shift and go to state 58
    DOT             shift and go to state 59


state 23

    (20) While -> WHILE . LPAREN BoolExpr RPAREN LBRACE Bloque RBRACE

    LPAREN          shift and go to state 60


state 24

    (21) For -> FOR . LPAREN ForInit SEMICOLON Expr SEMICOLON ForUpdate RPAREN LBRACE Bloque RBRACE

    LPAREN          shift and go to state 61


state 25

    (18) If -> IF . LPAREN Expr RPAREN LBRACE Bloque RBRACE ELSE LBRACE Bloque RBRACE
    (19) If -> IF . LPAREN Expr RPAREN LBRACE Bloque RBRACE

    LPAREN          shift and go to state 62


state 26

    (87) Tipo -> INT .

    IDENTIFIER      reduce using rule 87 (Tipo -> INT .)


state 27

    (88) Tipo -> FLOAT .

    IDENTIFIER      reduce using rule 88 (Tipo -> FLOAT .)


state 28

    (89) Tipo -> BOOL .

    IDENTIFIER      reduce using rule 89 (Tipo -> BOOL .)


state 29

    (7) Sentencia -> Declaracion SEMICOLON .

    RETURN          reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    STRUCT          reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    IDENTIFIER      reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    WHILE           reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    FOR             reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    IF              reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    INT             reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    FLOAT           reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    BOOL            reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    $end            reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)
    RBRACE          reduce using rule 7 (Sentencia -> Declaracion SEMICOLON .)


state 30

    (11) Sentencia -> Asignacion SEMICOLON .

    RETURN          reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    STRUCT          reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    IDENTIFIER      reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    WHILE           reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    FOR             reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    IF              reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    INT             reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    FLOAT           reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    BOOL            reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    $end            reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)
    RBRACE          reduce using rule 11 (Sentencia -> Asignacion SEMICOLON .)


state 31

    (12) Sentencia -> LlamadoFun SEMICOLON .

    RETURN          reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    STRUCT          reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    IDENTIFIER      reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    WHILE           reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    FOR             reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    IF              reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    INT             reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    FLOAT           reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    BOOL            reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    $end            reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)
    RBRACE          reduce using rule 12 (Sentencia -> LlamadoFun SEMICOLON .)


state 32

    (13) Sentencia -> LlamadoMet SEMICOLON .

    RETURN          reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    STRUCT          reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    IDENTIFIER      reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    WHILE           reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    FOR             reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    IF              reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    INT             reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    FLOAT           reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    BOOL            reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    $end            reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)
    RBRACE          reduce using rule 13 (Sentencia -> LlamadoMet SEMICOLON .)


state 33

    (17) Sentencia -> RETURN Expr . SEMICOLON

    SEMICOLON       shift and go to state 63


state 34

    (57) Expr -> AritExpr .
    (59) AritExpr -> AritExpr . PLUS AritTerm
    (60) AritExpr -> AritExpr . MINUS AritTerm
    (72) Relacion -> AritExpr . RelOp AritExpr
    (73) RelOp -> . LT
    (74) RelOp -> . GT
    (75) RelOp -> . LE
    (76) RelOp -> . GE
    (77) RelOp -> . EQ
    (78) RelOp -> . NE

    SEMICOLON       reduce using rule 57 (Expr -> AritExpr .)
    RPAREN          reduce using rule 57 (Expr -> AritExpr .)
    RBRACKET        reduce using rule 57 (Expr -> AritExpr .)
    COMMA           reduce using rule 57 (Expr -> AritExpr .)
    PLUS            shift and go to state 64
    MINUS           shift and go to state 65
    LT              shift and go to state 67
    GT              shift and go to state 68
    LE              shift and go to state 69
    GE              shift and go to state 70
    EQ              shift and go to state 71
    NE              shift and go to state 72

    RelOp                          shift and go to state 66

state 35

    (58) Expr -> BoolExpr .
    (29) BoolExpr -> BoolExpr . OR BoolTerm

